tests/error/error04.correct
attempt to create new instance of unknown class 'A'
